package com.thecommitcrew.domain.enums;

public enum OrderStatus {
    NEW,
    FILLED,
    REJECTED,
    CANCELLED
}
